fix: cubes around section are not showing

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,10 @@
 :root,
 body {
-  background-color: #f6f7f9 !important;
   scroll-behavior: smooth;
+}
+
+body {
+  background-color: #f6f7f9 !important;
 }
 
 .accordion > .card:not(:last-of-type) {
